[package]
name = "bentoml-core"
version = "1.0.21-dev"
edition = "2021"
license = "Apache-2.0"
description = "The blazing-fast core of BentoML"
repository = "github.com/bentoml/bentoml-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bentoml_core"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
data-encoding = "2.4.0"
http = "0.2.9"
inventory = "0.3.6"
lazy_static = "1.4.0"
mac_address = "1.1.4"
pyo3 = "0.18.3"
rand = "0.8.5"
regex = "1.8.1"
serde = { version = "1.0.163", features = ["derive"] }
tar = "0.4.38"
tonic = "0.9.2"
uuid = { version = "1.3.3", features = ["v1", "std", "rng"] }
zstd = "0.12.3"
