[package]
name = "bentoml-core"
version = "1.0.21-dev"
edition = "2021"
license = "Apache-2.0"
description = "The blazing-fast core of BentoML"
repository = "github.com/bentoml/bentoml-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bentoml_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.18.3"
tar = "0.4.38"
zstd = "0.12.3"
